--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ dj-database-url==0.5.0
 Django==3.2.8
 django-allauth==0.45.0
 django-crispy-forms==1.13.0
+heroku==0.1.4
 mysqlclient==2.0.3
 oauthlib==3.1.1
 Pillow==8.4.0
 psycopg2-binary==2.9.1
 PyJWT==2.3.0
+python-dateutil==1.5
 python3-openid==3.2.0
 pytz==2021.3
 requests-oauthlib==1.3.0
