--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.5.0
 Django==3.2.8
 django-allauth==0.45.0
 django-crispy-forms==1.13.0
+gunicorn==20.1.0
 heroku==0.1.4
 mysqlclient==2.0.3
 oauthlib==3.1.1
